--- a/templates/actors/parts/actor-vehicle-system-item.html
+++ b/templates/actors/parts/actor-vehicle-system-item.html
@@ -24,7 +24,7 @@
         </h4>
         {{#if (and item.system.piloting.usedAsPilot item.system.isActive)}}
         <div class="vehicle-system-action flexcol">
-            <button class="tag roll-piloting">{{localize "SFRPG.VehicleSheet.Systems.RollPiloting"}}</button>
+            <button class="tag roll-piloting">{{localize "Piloting"}}</button>
         </div>
         {{/if}}
         {{#if (and (eq item.type "actorResource") item.actorResourceData)}}
